# Mirror-Encryptor

./: CMakeLists.txt  Makefile  README.md  decrypt.c  decrypt.h  encrypt.c  encrypt.h  fun_calcMirrorFun.c  fun_calcMirrorFun.h  fun_getFileSizeFun.c  fun_getFileSizeFun.h  fun_verifyKeyFun.c  fun_verifyKeyFun.h  funs.h  genkey.c  genkey.h  libs.h  struct_ByteModuleStruct.h
